new_tests/semantics/type/bad/045_CS4.cm

choice('hi') {
    on 'hey' {}
    on 'yo' .. 'sup' {}
    other {}
}
